# dioxus-fullstack-app

./: Cargo.toml  README.md
src/: main.rs
src/routes/: about.rs  home.rs  mod.rs
